2007-06-08 Raphael Neider <rneider AT web.de>

	* src/regression/Makefile: suppress parallel builds, allow easy
	  switching between pic14/pic16 ports
	* src/regression/picregs.h: added pic14/16 header file switch
	* src/regression/{compare7.c,compare8.c,compare9.c,compare10.c,
	  inline.c,nestfor.c,string1.c}: include "picregs.h"

2007-06-07 Borut Razem <borut.razem AT siol.net>

	* sim/ucsim/*.[ch], sim/ucsim/configure, sim/ucsim/configure.in:
	  permanent solution to suppress GCC 4.2.0 c++ warning:
	  deprecated conversion from string constant to `char *'
	  use 'const char *' where ever required
	* support/regression/generate-cases.py: implemented more flexible rule
	  for detection of testing functions, allowing white-spaces surrounding
	  the function name and the 'void' parameter.
	* support/regression/tests/constantRange.c,
	  support/regression/tests/scott-compare3.c: fixed failing regression
	  tests, uncovered by implementation of more flexible rule for detection
	  of testing functions

2007-06-04 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c(decorateType): better optimize '!!' and comparisons

2007-06-04 Borut Razem <borut.razem AT siol.net>

	* configure.in, configure, config_vc.awk: sdcc version number is now
	  stored in configure.in; removed .version
	* configure.in, configure, sdcc.spec, doc/sdccman.lyx, doc/sdccman.lyx,
	  doc/INSTALL.txt: version bumped to 2.7.2
	* sim/ucsim/configure.in, sim/ucsim/configure:
	  use "read" to read from .version

2007-06-03 Borut Razem <borut.razem AT siol.net>

	* */Makefile.in: removed annoying warning:
	  Makefile:xx: Makefile.dep: No such file or directory

2007-06-02 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (outBitC, genRet): used IS_OP_RUONLY,
	  (genNot, genXor): used toCarry, also fixes a bug for c = bit ^ val
	* src/mcs51/ralloc.c: removed IS_OP_RUONLY + some cosmetic changes
	* src/SDCCast.c (resultTypePropagate): propagate for '!',