@@ -15,12 +15,14 @@ void
 testAbsolute(void)
 {
 #if defined(SDCC_mcs51) || defined(SDCC_ds390) || defined(SDCC_hc08)
+  static {mem} at(0xCAB6) char s = 's';
   char {mem} *pC = (char {mem} *)(0xCAB0);
   int  {mem} *pI = (int  {mem} *)(0xCAB0);
 
   ASSERT(u == 'x');
   ASSERT(pC[7] == 'x');
   ASSERT(pC[9] == 'y');
+  ASSERT(pC[6] == 's');
   ASSERT(pI[0] == 0x1234);
 #endif
 }
